[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build-meta"

[project]
name = "feature-engineer-rl"
version = "0.1.0"
dependencies = [
    "openenv-core>=0.2.0",
    "fastapi",
    "uvicorn",
    "pandas",
    "numpy<2.0.0",
    "scikit-learn",
    "gymnasium"
]

[project.scripts]
server = "server.app:main"
